RESOLVED FIXED172022
[MediaStream] Streams while play while page is in background can get "stuck" when page is forgrounded.
https://bugs.webkit.org/show_bug.cgi?id=172022
Summary [MediaStream] Streams while play while page is in background can get "stuck" ...
Jer Noble
Reported 2017-05-12 00:28:13 PDT
[MediaStream] Streams while play while page is in background can get "stuck" when page is forgrounded.
Attachments
Patch (4.93 KB, patch)
2017-05-12 00:34 PDT, Jer Noble
no flags
Patch for landing (4.92 KB, patch)
2017-05-12 08:25 PDT, Jer Noble
no flags
Radar WebKit Bug Importer
Comment 1 2017-05-12 00:33:04 PDT
Jer Noble
Comment 2 2017-05-12 00:34:14 PDT
youenn fablet
Comment 3 2017-05-12 07:00:27 PDT
Comment on attachment 309880 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=309880&action=review > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.h:-123 > - void setVisible(bool) override { /* No-op */ } Should be final
youenn fablet
Comment 4 2017-05-12 07:01:07 PDT
A test might be good as well here or as a followup
Jer Noble
Comment 5 2017-05-12 08:25:02 PDT
(In reply to youenn fablet from comment #4) > A test might be good as well here or as a followup We don't have a way to extract the current displayed image from an AVSampleBufferDisplayLayer (which is what we'd need to test).
Jer Noble
Comment 6 2017-05-12 08:25:43 PDT
Created attachment 309896 [details] Patch for landing
youenn fablet
Comment 7 2017-05-12 08:31:37 PDT
By the way, should we try to optimize the case of a video element being not visible? It should be possible to ask the source to stop sending frames. Also, is there a relationship between this bug and the fact the webrtc incoming video track is setting frames to be rendered as kCMSampleAttachmentKey_DisplayImmediately?
WebKit Commit Bot
Comment 8 2017-05-12 09:05:41 PDT
Comment on attachment 309896 [details] Patch for landing Clearing flags on attachment: 309896 Committed r216766: <http://trac.webkit.org/changeset/216766>
WebKit Commit Bot
Comment 9 2017-05-12 09:05:43 PDT
All reviewed patches have been landed. Closing bug.
Jon Lee
Comment 10 2017-05-16 14:41:44 PDT
This introduced a bug with PiP on Mac.
Note You need to log in before you can comment on or make changes to this bug.